Fixed #52 : - Checking discontinuities before deleting a task on state machine, to account for the possibility of someone adding a row before removing a task leaving the extra line empty. - Made in between lines more visible (so people see them)

--- a/workflowmanagement/ui/static/css/react-statemachine.css
+++ b/workflowmanagement/ui/static/css/react-statemachine.css
@@ -153,20 +153,20 @@
     position: absolute;
     width: 100%;
     margin-top: -20px;
-    background-color: rgb(199, 199, 199);
+    background-color: #95A5A6;
 }
 .level-separator:hover{
-    background-color: rgb(199, 199, 199);
+    background-color: #95A5A6;
 }
 .level-label{
     position: absolute;
     right:0;
     margin-top: -15px;
-    color: rgb(199, 199, 199);
+    color: #95A5A6;
     cursor: pointer;
 }
 .level-separator-container{
-    opacity: 0.2;
+    opacity: 0.7;
     position:relative;
 }
 
